# decl

./: .gitignore  .gitmodules  README.md
decl-gh-runtime/: README.md  meson.build  meson_options.txt
decl-gh-runtime/lfi-verify/: meson.build
decl-gh-runtime/liblfi/: meson.build
decl-runtime/: README.md  meson.build
decl-runtime/liblfi/: proc.c
decl-runtime/liblfix/: meson.build
decl-toolchain/: meson.build
decl-toolchain/lfi-leg/: args.h  main.c
decl-toolchain/lfi-postlink/: amd64.c  arm64.c  main.c  meson.build  postlink.h
flagchecker/: .gitignore  README.md  meson.build
flagchecker/src/: args.h  flags.c  main.c  verifier.h  verify.c
flagchecker/subprojects/: fadec.wrap
flagchecker/subprojects/packagefiles/fadec/: meson.build
lfi-llvm-toolchain/: .gitignore  README.md  aarch64-lfi-linux-musl.cfg  build-all.sh  build-compiler-rt.sh  build-lfi-compiler.sh  build-lfi-runtimes.sh  build-lfi.sh  build-libcxx.sh  build-llvm.sh  build-mimalloc.sh  build-musl.sh  build-native-compiler.sh  build-native.sh  clean.sh  decl-toolchains-aarch64.sh  decl-toolchains-x86_64.sh  download.sh  lfi-toolchains-aarch64.sh  lfi-toolchains-x86_64.sh  lld.gen  x86_64-lfi-linux-musl.cfg
sp1-verify/: Cargo.toml  aarch64-decl_branch-linux-musl.json  aarch64-decl_timer-linux-musl.json  aarch64-native-linux-musl.json  bench-aarch64.sh  bench-x86_64.sh  build-aarch64.sh  build-x86_64.sh  x86_64-decl_branch-linux-musl.json  x86_64-decl_timer-linux-musl.json  x86_64-lfi-linux-musl.json  x86_64-native-linux-musl.json  x86_64-unknown-linux-musl.json
sp1-verify/proof/: proof-bn254-groth16.bin.proof  proof-bn254-plonk.bin.proof  proof-bn254-plonk.bin.vk  proof-chess-groth16.bin.proof  proof-chess-plonk.bin.proof  proof-chess-plonk.bin.vk  proof-fibonacci-groth16.bin.proof  proof-fibonacci-groth16.bin.vk  proof-fibonacci-plonk.bin.proof  proof-fibonacci-plonk.bin.pub  split.sh
sp1-verify/result/: 7950x.txt  m2.txt  summary.txt
sp1-verify/sp1split/: Cargo.toml
sp1-verify/src/: main.rs
sp1-verify/verifier/: Cargo.toml
sp1-verify/verifier/src/: lib.rs
spec/: README.md  shield.sh
spec/config/: bench.sh
verify/amd64/: Knitfile  insn.h  (+4 more)
(+35 files in other folders)
