[package]
name = "verifier"
description = "Verifier for SP1 Groth16 and Plonk proofs."
edition = "2021"

[dependencies]
bn = { git = "https://github.com/sp1-patches/bn", tag = "substrate_bn-v0.6.0-patch-v2", package = "substrate-bn" }
sha2 = { path = "../hashes/sha2", default-features = false }
thiserror-no-std = "2.0.2"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0", default-features = false }

[dev-dependencies]
sp1-sdk = "3.0.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"

[features]
default = []
std = []
